--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" class="root">
+        <h1>Not Rendered</h1> 
+    </div>
 </body>
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-<script src="./App.js">
+<script type="module" src="./src/App.js">
  
 </script>
 </html>
